src/test/resources/failing/fail70.pnd
template Foo<A> {
    P(x) : int
    @type Animal
}
Foo<_> as F1

Baz(x, y) : int, F1.Dog